--- a/HomeManager/View/Dagboek/ucDagboek.xaml
+++ b/HomeManager/View/Dagboek/ucDagboek.xaml
@@ -3,10 +3,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:V="clr-namespace:HomeManager.View"
+    xmlns:behaviors="clr-namespace:HomeManager.Behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="clr-namespace:HomeManager.Helpers"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:helpers="clr-namespace:HomeManager.Helpers"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -61,6 +63,7 @@
                                 <Button
                                     Grid.Column="1"
                                     Command="{Binding cmdSave}"
+                                    CommandParameter="{Binding ElementName=MyRTB}"
                                     Style="{StaticResource SaveImage}" />
 
                                 <Label Grid.Row="1" Grid.Column="1">Save File</Label>
@@ -68,7 +71,7 @@
                                 <Button
                                     Grid.Column="2"
                                     Command="{Binding cmdDelete}"
-                                    Style="{StaticResource DeleteImage}"/>
+                                    Style="{StaticResource DeleteImage}" />
 
                                 <Label Grid.Row="1" Grid.Column="2">Delete File</Label>
 
@@ -124,7 +127,7 @@
                         </RibbonGroup>
 
                         <!--  groep2  -->
-                        <RibbonGroup Header="Edit tekst" >
+                        <RibbonGroup Header="Edit tekst">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="auto" />
@@ -258,17 +261,20 @@
                     </Grid.ColumnDefinitions>
 
                     <ListBox
+                        x:Name="MyListBox"
                         Margin="2"
                         Background="LightGray"
                         ItemsSource="{Binding MijnCollectie}"
-                        SelectedItem="{Binding MySelectedItem, Mode=TwoWay}"/>
+                        SelectedItem="{Binding MySelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                        <i:Interaction.Behaviors>
+                            <behaviors:clsDagboekListboxSelectionChangedBehavior TargetRichTextBox="{Binding ElementName=MyRTB}" />
+                        </i:Interaction.Behaviors>
+                    </ListBox>
+
                     <RichTextBox
                         x:Name="MyRTB"
                         Grid.Column="1"
-                        Margin="2"
-                        helpers:clsRichTextBoxHelper.BoundDocument="{Binding MySelectedItem.DagboekContentString, Mode=TwoWay}">
-
-                    </RichTextBox>
+                        Margin="2" />
                     <Button
                         Grid.Column="2"
                         Width="20"
