--- a/HomeManager/View/ToDo/ucTodoPopup.xaml
+++ b/HomeManager/View/ToDo/ucTodoPopup.xaml
@@ -203,10 +203,16 @@
                     Content="Todo Color"
                     FontSize="12" />
                 <ComboBox
+                    Name="TodoColorCombobox"
                     Grid.Row="7"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="Center" />
+                    VerticalAlignment="Center"
+                    DataContext="{Binding Source={StaticResource VML}, Path=KleurenViewModel}"
+                    ItemsSource="{Binding MijnCollectie}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.TodoColorID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                    SelectedValuePath="TodoColorID"
+                    />
                 <Label
                     Grid.Row="8"
                     Grid.Column="2"
