--- a/HomeManager/View/Security/ucUnlockUser.xaml
+++ b/HomeManager/View/Security/ucUnlockUser.xaml
@@ -76,28 +76,35 @@
                             <Setter Property="Background" Value="Transparent" />
                             <Setter Property="BorderBrush" Value="Transparent" />
                             <Setter Property="BorderThickness" Value="0" />
-                            <Setter Property="Margin" Value="0" />
+                            <Setter Property="Margin" Value="0,2,0,2" />
                             <Setter Property="FocusVisualStyle" Value="{x:Null}" />
 
-                            <!--  Geen visuele feedback voor selectie  -->
-                            <Style.Triggers>
-                                <Trigger Property="IsSelected" Value="True">
-                                    <Setter Property="Background" Value="{x:Null}" />
-                                    <Setter Property="BorderBrush" Value="{x:Null}" />
-                                </Trigger>
-                                <Trigger Property="IsSelected" Value="False">
-                                    <Setter Property="Background" Value="{x:Null}" />
-                                    <Setter Property="BorderBrush" Value="{x:Null}" />
-                                </Trigger>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="{x:Null}" />
-                                    <Setter Property="BorderBrush" Value="{x:Null}" />
-                                </Trigger>
-                                <Trigger Property="IsMouseOver" Value="False">
-                                    <Setter Property="Background" Value="{x:Null}" />
-                                    <Setter Property="BorderBrush" Value="{x:Null}" />
-                                </Trigger>
-                            </Style.Triggers>
+                            <!--  Aangepaste ControlTemplate  -->
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ListBoxItem">
+                                        <Border
+                                            Name="Border"
+                                            Background="Transparent"
+                                            BorderBrush="Transparent"
+                                            BorderThickness="0">
+                                            <ContentPresenter />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <!--  Geselecteerd item  -->
+                                            <Trigger Property="IsSelected" Value="True">
+                                                <Setter TargetName="Border" Property="Background" Value="{x:Null}" />
+                                                <Setter TargetName="Border" Property="BorderBrush" Value="{x:Null}" />
+                                            </Trigger>
+                                            <!--  MouseOver  -->
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter TargetName="Border" Property="Background" Value="Transparent" />
+                                                <Setter TargetName="Border" Property="BorderBrush" Value="Transparent" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
                         </Style>
                     </ListBox.ItemContainerStyle>
                     <ListBox.ItemTemplate>
@@ -119,7 +126,7 @@
                                                 <Setter Property="BorderBrush" Value="DarkGreen" />
                                                 <Setter Property="BorderThickness" Value="2" />
                                             </DataTrigger>
-                                            <!--  Muisovergang  -->
+                                            <!--  MouseOver  -->
                                             <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem}, Path=IsMouseOver}" Value="True">
                                                 <Setter Property="Background" Value="LightYellow" />
                                                 <Setter Property="BorderBrush" Value="Orange" />
@@ -136,7 +143,7 @@
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="50" />
                                         <ColumnDefinition Width="*" />
-                                        <ColumnDefinition Width="30" />
+                                        <ColumnDefinition Width="40" />
                                     </Grid.ColumnDefinitions>
                                     <Border
                                         Width="44"
@@ -169,13 +176,34 @@
                                         <TextBlock
                                             FontSize="15"
                                             Foreground="Black"
-                                            Text="{Binding Persoon.Naam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                            Text="{Binding Persoon.Naam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />                                      
                                     </StackPanel>
+                                    <Path
+                        Grid.Column="2"
+                        Width="15"
+                        Height="15"
+                        HorizontalAlignment="Left"
+                        Fill="Black"
+                        Stretch="Fill">
+                                        <Path.Style>
+                                            <Style TargetType="Path">
+                                                <Setter Property="Data" Value="{StaticResource myLock}" />
+                                            
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem}, Path=IsSelected}" Value="True">
+                                                        <Setter Property="Data" Value="{StaticResource myUnLock2}" />
+                                                      
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Path.Style>
+                                    </Path>
                                 </Grid>
                             </Border>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
+
 
 
 
