--- a/HomeManager/View/Dagboek/ucDagboek.xaml
+++ b/HomeManager/View/Dagboek/ucDagboek.xaml
@@ -11,7 +11,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    >
 
     <DockPanel DataContext="{Binding Source={StaticResource VML}, Path=DagboekViewModel}">
         <Border
@@ -144,7 +145,12 @@
                                     Width="10"
                                     Height="10"
                                     Content="{StaticResource BoldIcon}"
-                                    Style="{StaticResource myToggleButton}" />
+                                    Style="{StaticResource myToggleButton}" 
+                                    Command="{Binding cmdSetFontWeight}"
+                                    CommandParameter="{Binding ElementName=MyRTB}"
+                                    IsChecked="{Binding MyRTBLayout.IsBold, Mode=OneWay}"
+                                    
+                                    />
                                 <Label Grid.Column="1" Padding="1">Vet</Label>
                                 <!--<RibbonToggleButton x:Name="btnBold" Style="{StaticResource myToggleButton}" Content="{StaticResource BoldIcon}"/>-->
                                 <RibbonToggleButton
@@ -164,7 +170,10 @@
                                     Width="10"
                                     Height="10"
                                     Content="{StaticResource UnderlineIcon}"
-                                    Style="{StaticResource myToggleButton}" />
+                                    Style="{StaticResource myToggleButton}"
+                                    IsChecked="{Binding MyRTBLayout.IsUnderline, Mode=OneWay}"
+                                    Command="{Binding cmdSetUnderline}"
+                                    CommandParameter="{Binding ElementName=MyRTB}"/>
                                 <Label
                                     Grid.Row="2"
                                     Grid.Column="1"
@@ -265,7 +274,8 @@
                         Margin="2"
                         Background="LightGray"
                         ItemsSource="{Binding MijnCollectie}"
-                        SelectedItem="{Binding MySelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                        SelectedIndex="-1"
+                        >
                         <i:Interaction.Behaviors>
                             <behaviors:clsDagboekListboxSelectionChangedBehavior TargetRichTextBox="{Binding ElementName=MyRTB}" />
                         </i:Interaction.Behaviors>
@@ -274,7 +284,11 @@
                     <RichTextBox
                         x:Name="MyRTB"
                         Grid.Column="1"
-                        Margin="2" />
+                        Margin="2">
+                        <i:Interaction.Behaviors>
+                            <behaviors:clsRichTextBoxSelectionBehavior Layout="{Binding MyRTBLayout}" />
+                        </i:Interaction.Behaviors>
+                    </RichTextBox>
                     <Button
                         Grid.Column="2"
                         Width="20"
