--- a/HomeManager/View/ToDo/ucTodoPopup.xaml
+++ b/HomeManager/View/ToDo/ucTodoPopup.xaml
@@ -150,7 +150,8 @@
                     Grid.Row="4"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="Center" />
+                    VerticalAlignment="Center"
+                    IsChecked="{Binding MijnSelectedItem.Belangrijk, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                 <Label
                     Grid.Row="5"
@@ -194,7 +195,7 @@
                     DataContext="{Binding Source={StaticResource VML}, Path=CategorieënViewModel}"
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.TodoCategorieID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                    SelectedValuePath="TodoCategorieID" />
+                    SelectedValuePath="ToDoCategorieID" />
                 <Label
                     Grid.Row="7"
                     Grid.Column="2"
@@ -211,7 +212,7 @@
                     DataContext="{Binding Source={StaticResource VML}, Path=KleurenViewModel}"
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.TodoColorID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                    SelectedValuePath="TodoColorID"
+                    SelectedValuePath="ToDoColorID"
                     />
                 <Label
                     Grid.Row="8"
@@ -224,7 +225,8 @@
                     Grid.Row="8"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="Center" />
+                    VerticalAlignment="Center"
+                    IsChecked="{Binding MijnSelectedItem.IsKlaar, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
 
 
