--- a/HomeManager/View/ToDo/ucTodoPopup.xaml
+++ b/HomeManager/View/ToDo/ucTodoPopup.xaml
@@ -77,7 +77,7 @@
                     Grid.Row="1"
                     Grid.RowSpan="9"
                     Grid.Column="1"
-                    DisplayMemberPath="Login"
+                    DisplayMemberPath="Onderwerp"
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedIndex="{Binding MijnSelectedItem.MijnSelectedIndex, Mode=TwoWay}"
                     SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
@@ -173,7 +173,7 @@
                         VerticalAlignment="Center"
                         DataContext="{Binding Source={StaticResource VML}, Path=CollectiesViewModel}"
                         ItemsSource="{Binding MijnCollectie}"
-                        SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.SelectedCollectie.ToDoCollectieID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                        SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.TodoCollectieID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                         SelectedValuePath="ToDoCollectieID" />
                     <Button Style="{StaticResource OpenUCButton}" />
 
@@ -212,8 +212,7 @@
                     DataContext="{Binding Source={StaticResource VML}, Path=KleurenViewModel}"
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.TodoColorID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                    SelectedValuePath="ToDoColorID"
-                    />
+                    SelectedValuePath="ToDoColorID" />
                 <Label
                     Grid.Row="8"
                     Grid.Column="2"
