--- a/HomeManager/View/Personen/ucEmailType.xaml
+++ b/HomeManager/View/Personen/ucEmailType.xaml
@@ -35,11 +35,8 @@
                         Fill="White"
                         Stretch="Fill" />
                     <TextBlock
-                        Margin="10,0,0,0"
-                        VerticalAlignment="Center"
-                        FontSize="20"
-                        Foreground="White"
-                        Text="EmailTypen" />
+                        Style="{StaticResource TitleBarText}"
+                        Text="EmailType" />
 
                 </StackPanel>
                 <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
