--- a/HomeManager/View/Personen/ucAdressen.xaml
+++ b/HomeManager/View/Personen/ucAdressen.xaml
@@ -24,11 +24,16 @@
             BorderBrush="LightBlue"
             BorderThickness="2">
             <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
                 <StackPanel
                     Margin="10,0,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Orientation="Horizontal">
+                    Orientation="Horizontal"
+                    Grid.Column="0">
                     <Path
                         Width="20"
                         Height="20"
@@ -36,14 +41,13 @@
                         Fill="White"
                         Stretch="Fill" />
                     <TextBlock
-                        Margin="10,0,0,0"
-                        VerticalAlignment="Center"
-                        FontSize="20"
-                        Foreground="White"
+                        Style="{StaticResource TitleBarText}"
                         Text="Adressen" />
-
                 </StackPanel>
-                <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
+                <uc:ucWerkBalk
+                    Grid.Column="1"
+                    Margin="10,0,10,0"
+                    VerticalAlignment="Top" />
             </Grid>
         </Border>
 
@@ -87,7 +91,7 @@
                     x:Name="tbNaam"
                     Grid.Row="0"
                     Grid.Column="3"
-                    Text="{Binding MijnSelectedItem.PersoonID, Mode=OneWay}" />
+                    Text="{Binding MijnSelectedPersoonItem, Mode=OneWay}" />
 
                 <TextBlock
                     x:Name="Straat"
@@ -151,25 +155,6 @@
                     ItemsSource="{Binding MijnCollectie}"
                     SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.FunctieID, Mode=TwoWay}"
                     SelectedValuePath="FunctieID" />
-                <TextBlock
-                    x:Name="Persoon"
-                    Grid.Row="7"
-                    Grid.Column="2"
-                    Margin="5"
-                    Text="Persoon"
-                    TextAlignment="Right" />
-                <!--<ComboBox
-                    x:Name="cboPersoon"
-                    Grid.Row="7"
-                    Grid.Column="3"
-                    Margin="5"
-                    DataContext="{Binding Source={StaticResource VML}, Path=PersonenViewModel}"
-                    DisplayMemberPath="PersoonDisplayName"
-                    ItemsSource="{Binding MijnCollectie}"
-                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.PersoonID, Mode=TwoWay}"
-                    SelectedValuePath="PersoonID" />-->
-
-
             </Grid>
         </Border>
     </Grid>
