--- a/HomeManager/View/Personen/ucLand.xaml
+++ b/HomeManager/View/Personen/ucLand.xaml
@@ -38,10 +38,7 @@
                         Fill="White"
                         Stretch="Fill" />
                     <TextBlock
-                        Margin="10,0,0,0"
-                        VerticalAlignment="Center"
-                        FontSize="20"
-                        Foreground="White"
+                        Style="{StaticResource TitleBarText}"
                         Text="Landen" />
 
                 </StackPanel>
