--- a/HomeManager/View/Personen/ucTelefoonType.xaml
+++ b/HomeManager/View/Personen/ucTelefoonType.xaml
@@ -35,12 +35,7 @@
                         Data="{StaticResource myPathSetting}"
                         Fill="White"
                         Stretch="Fill" />
-                    <TextBlock
-                        Margin="10,0,0,0"
-                        VerticalAlignment="Center"
-                        FontSize="20"
-                        Foreground="White"
-                        Text="TelefoonType" />
+                    <TextBlock Style="{StaticResource TitleBarText}" Text="TelefoonType" />
 
                 </StackPanel>
                 <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
