--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -61,24 +61,6 @@
             <V:ucCategorie />
         </DataTemplate>
 
-        <Storyboard x:Key="ShowMenu">
-            <DoubleAnimation
-                Storyboard.TargetName="HamburgerMenu"
-                Storyboard.TargetProperty="Width"
-                From="0"
-                To="200"
-                Duration="0:0:0.3" />
-        </Storyboard>
-
-
-        <Storyboard x:Key="HideMenu">
-            <DoubleAnimation
-                Storyboard.TargetName="HamburgerMenu"
-                Storyboard.TargetProperty="Width"
-                From="200"
-                To="0"
-                Duration="0:0:0.3" />
-        </Storyboard>
     </Window.Resources>
 
 
@@ -96,8 +78,8 @@
 
         <V:ucTitlePerson
             Grid.ColumnSpan="2"
-            Margin="0,0,10,0"
             Width="120"
+            Margin="0,0,10,0"
             HorizontalAlignment="Right"
             VerticalAlignment="Center" />
 
@@ -121,29 +103,40 @@
             Width="200"
             HorizontalAlignment="Left"
             Background="#99024f87">
+            <Border.Style>
+                <Style>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsMenuVisible, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Value="true">
+                            <DataTrigger.EnterActions>
+                                <BeginStoryboard Storyboard="{StaticResource ShowMenu}" />
+                            </DataTrigger.EnterActions>
+                            <DataTrigger.ExitActions>
+                                <BeginStoryboard Storyboard="{StaticResource HideMenu}" />
+                            </DataTrigger.ExitActions>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Border.Style>
 
             <Grid Width="200">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="30" />
+                    <RowDefinition Height="40" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="20" />
                 </Grid.RowDefinitions>
-                <Path
-                    Width="30"
-                    Height="30"
-                    Margin="0,5,0,0"
-                    HorizontalAlignment="Center"
-                    Data="{StaticResource myPathHouse}"
-                    Fill="White" />
+
+                <Path Style="{StaticResource myHomeButtonMenu}"/>
+
+ 
 
                 <StackPanel
                     Grid.Row="1"
                     Width="200"
                     HorizontalAlignment="Left"
                     Orientation="Vertical">
-                    
-                    <Expander Style="{StaticResource myHamburgerPersonen}">
-                        <StackPanel x:Name="stckPerson">
+
+                    <Expander Style="{StaticResource myHamburgerPersonen}" IsExpanded="{Binding IsPersonenExpanderMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" >
+                        <StackPanel x:Name="stckPerson" >
                             <Button
                                 Command="{Binding NavCommand}"
                                 CommandParameter="clsPersoonViewModel"
@@ -187,10 +180,9 @@
                         </StackPanel>
                     </Expander>
 
-
                     <Button Content="Dagboek" Style="{StaticResource myExpanderDagboek}" />
 
-                    <Expander Style="{StaticResource myHamburgerBudget}">
+                    <Expander Style="{StaticResource myHamburgerBudget}" IsExpanded="{Binding IsBudgetExpanderMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                         <StackPanel x:Name="stckBudget">
                             <Button Content="Domiciliëring" Style="{StaticResource myMenuTandwiel}" />
                             <Button Content="Begunstigden" Style="{StaticResource myMenuTandwiel}" />
@@ -203,7 +195,7 @@
                         </StackPanel>
                     </Expander>
 
-                    <Expander Style="{StaticResource myHamburgerTodo}">
+                    <Expander Style="{StaticResource myHamburgerTodo}" IsExpanded="{Binding IsTodoExpanderMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 
                         <StackPanel x:Name="stckTodo">
                             <Button Content="Todo Collectie" Style="{StaticResource myMenuTandwiel}" />
@@ -212,7 +204,8 @@
                         </StackPanel>
 
                     </Expander>
-                    <Expander Style="{StaticResource myHamburgerSecurity}">
+
+                    <Expander Style="{StaticResource myHamburgerSecurity}" IsExpanded="{Binding IsSecurityExpanderMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                         <StackPanel x:Name="stckSecurity">
                             <Button
                                 Command="{Binding NavCommand}"
@@ -237,14 +230,15 @@
                         </StackPanel>
                     </Expander>
 
-                    <Expander Style="{StaticResource myHamburgerStickyNotes}">
+                    <Expander Style="{StaticResource myHamburgerStickyNotes}" 
+                              IsExpanded="{Binding IsStickyNotesExpanderMenu, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                              
+                              >
                         <StackPanel x:Name="stckStickynotes">
                             <Button Content="Sticky notes colors" Style="{StaticResource myExpanderStickyNoteColors}" />
                         </StackPanel>
+              
                     </Expander>
-
-
-
 
                 </StackPanel>
 
@@ -261,14 +255,11 @@
         </Border>
 
         <ToggleButton
-            x:Name="btnMenu"
             Grid.Column="0"
             Grid.ColumnSpan="2"
-            HorizontalAlignment="Left"
-            Checked="ToggleButton_Checked"
+            Command="{Binding cmdMenu}"
             IsChecked="True"
-            Style="{StaticResource myHamburgerMenu}"
-            Unchecked="ToggleButton_Unchecked" />
+            Style="{StaticResource myHamburgerMenu}" />
 
         <!--#endregion-->
 
