--- a/HomeManager/View/ToDo/ucTodoItem.xaml
+++ b/HomeManager/View/ToDo/ucTodoItem.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HomeManager.View"
              mc:Ignorable="d" Height="Auto" Width="Auto">
-    <Border BorderBrush="Green" BorderThickness="1" CornerRadius="5" Background="#E6F7E6" Padding="10" Margin="5">
+    <Border BorderBrush="Red" BorderThickness="1" CornerRadius="5" Background="MistyRose" Padding="10" Margin="5">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*" />
@@ -28,17 +28,17 @@
             <CheckBox Grid.Column="1" Margin="5,0" VerticalAlignment="Center" />
 
             <!-- Bewerk-icoon -->
-            <Button Grid.Column="2" Content="✏️" Margin="5,0" Width="20" Height="20" VerticalAlignment="Center"
+            <Button Grid.Column="2" Style="{StaticResource EditTodoImage}" Margin="5,0" Width="20" Height="20" VerticalAlignment="Center"
                     Command="{Binding EditCommand}" CommandParameter="{Binding}" />
 
             <!-- Verwijder-icoon -->
-            <Button Grid.Column="3" Content="🗑️" Margin="5,0" Width="20" Height="20" VerticalAlignment="Center"
+            <Button Grid.Column="3" Style="{StaticResource DeleteTodoImage}" Margin="5,0" Width="20" Height="20" VerticalAlignment="Center"
                     Command="{Binding DeleteCommand}" CommandParameter="{Binding}" />
 
             <!-- Paperclip-icoon -->
-            <Button Grid.Column="4" Margin="5,0" Width="20" Height="20" VerticalAlignment="Center">
-                
-            </Button>
+            <Button Grid.Column="4" Style="{StaticResource PaperclipTodoImage}"  Margin="5,0" Width="20" Height="20" VerticalAlignment="Center"/>
+
+
         </Grid>
     </Border>
 </UserControl>
