--- a/HomeManager/View/ToDo/ucTodoItem.xaml
+++ b/HomeManager/View/ToDo/ucTodoItem.xaml
@@ -1,11 +1,20 @@
-﻿<UserControl x:Class="HomeManager.View.ucTodoItem"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HomeManager.View"
-             mc:Ignorable="d" Height="Auto" Width="Auto">
-    <Border BorderBrush="Red" BorderThickness="1" CornerRadius="5" Background="MistyRose" Padding="10" Margin="5">
+﻿<UserControl
+    x:Class="HomeManager.View.ucTodoItem"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:HomeManager.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodel="clr-namespace:HomeManager.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:clsTodoPopupVM}"
+    Width="Auto"
+    Height="Auto"
+    mc:Ignorable="d">
+    <Border
+        Margin="5"
+        Padding="10"
+        Background="MistyRose"
+        BorderBrush="Red"
+        BorderThickness="1"
+        CornerRadius="5">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*" />
@@ -15,30 +24,62 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <!-- Verticale rechthoek -->
-            <Rectangle Grid.Column="0" Width="10" Fill="{Binding VerticalBarColor}" />
+            <!--  Verticale rechthoek  -->
+            <Rectangle
+                Grid.Column="0"
+                Width="10"
+                Fill="{Binding VerticalBarColor}" />
 
-            <!-- Titel en details -->
+            <!--  Titel en details  -->
             <StackPanel Grid.Column="0">
-                <TextBlock Text="{Binding Title}" FontWeight="Bold" FontSize="14" Foreground="Black" />
-                <TextBlock Text="{Binding Detail}" FontSize="12" Foreground="Gray" />
+                <TextBlock
+                    FontSize="14"
+                    FontWeight="Bold"
+                    Foreground="Black"
+                    Text="{Binding MijnSelectedItem.Onderwerp}" />
+                <TextBlock
+                    FontSize="12"
+                    Foreground="Gray"
+                    Text="{Binding MijnSelectedItem.Detail}" />
             </StackPanel>
 
-            <!-- Checkbox -->
-            <CheckBox Grid.Column="1" Margin="5,0" VerticalAlignment="Center" />
+            <!--  Checkbox  -->
+            <CheckBox
+                Grid.Column="1"
+                Margin="5,0"
+                VerticalAlignment="Center"
+                IsChecked="{Binding MijnSelectedItem.IsKlaar, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-            <!-- Bewerk-icoon -->
-            <Button Grid.Column="2" Style="{StaticResource EditTodoImage}" Margin="5,0" Width="20" Height="20" VerticalAlignment="Center"
-                    Command="{Binding EditCommand}" CommandParameter="{Binding}" />
+            <!--  Bewerk-icoon  -->
+            <Button
+                Grid.Column="2"
+                Width="20"
+                Height="20"
+                Margin="5,0"
+                VerticalAlignment="Center"
+                Command="{Binding EditCommand}"
+                CommandParameter="{Binding}"
+                Style="{StaticResource EditTodoImage}" />
 
-            <!-- Verwijder-icoon -->
-            <Button Grid.Column="3" Style="{StaticResource DeleteTodoImage}" Margin="5,0" Width="20" Height="20" VerticalAlignment="Center"
-                    Command="{Binding DeleteCommand}" CommandParameter="{Binding}" />
+            <!--  Verwijder-icoon  -->
+            <Button
+                Grid.Column="3"
+                Width="20"
+                Height="20"
+                Margin="5,0"
+                VerticalAlignment="Center"
+                Command="{Binding DeleteCommand}"
+                CommandParameter="{Binding}"
+                Style="{StaticResource DeleteTodoImage}" />
 
-            <!-- Paperclip-icoon -->
-            <Button Grid.Column="4" Style="{StaticResource PaperclipTodoImage}"  Margin="5,0" Width="20" Height="20" VerticalAlignment="Center"/>
-
-
+            <!--  Paperclip-icoon  -->
+            <Button
+                Grid.Column="4"
+                Width="20"
+                Height="20"
+                Margin="5,0"
+                VerticalAlignment="Center"
+                Style="{StaticResource PaperclipTodoImage}" />
         </Grid>
     </Border>
 </UserControl>
